[gd_scene load_steps=35 format=1]

[ext_resource path="res://character/character.gd" type="Script" id=1]
[ext_resource path="res://character_shadow/shadow.tscn" type="PackedScene" id=2]
[ext_resource path="res://trail/trail.tscn" type="PackedScene" id=3]
[ext_resource path="res://particles/blood.tscn" type="PackedScene" id=4]
[ext_resource path="res://particles/blood_leak.tscn" type="PackedScene" id=5]
[ext_resource path="res://character/sounds/aargh/aargh0.wav" type="Sample" id=6]
[ext_resource path="res://character/sounds/aargh/aargh1.wav" type="Sample" id=7]
[ext_resource path="res://character/sounds/aargh/aargh2.wav" type="Sample" id=8]
[ext_resource path="res://character/sounds/aargh/aargh3.wav" type="Sample" id=9]
[ext_resource path="res://character/sounds/aargh/aargh4.wav" type="Sample" id=10]
[ext_resource path="res://character/sounds/aargh/aargh5.wav" type="Sample" id=11]
[ext_resource path="res://character/sounds/aargh/aargh6.wav" type="Sample" id=12]
[ext_resource path="res://character/sounds/aargh/aargh7.wav" type="Sample" id=13]
[ext_resource path="res://character/sounds/swing/axe3.wav" type="Sample" id=14]
[ext_resource path="res://character/sounds/swing/axe1.wav" type="Sample" id=15]
[ext_resource path="res://character/sounds/swing/axe2.wav" type="Sample" id=16]
[ext_resource path="res://character/sounds/bow_release.wav" type="Sample" id=17]
[ext_resource path="res://character/sounds/fail_hits/Socapex - Swordsmall.wav" type="Sample" id=18]
[ext_resource path="res://character/sounds/fail_hits/Socapex - Swordsmall_1.wav" type="Sample" id=19]
[ext_resource path="res://character/sounds/fail_hits/Socapex - Swordsmall_2.wav" type="Sample" id=20]
[ext_resource path="res://character/sounds/fail_hits/Socapex - Swordsmall_3.wav" type="Sample" id=21]
[ext_resource path="res://character/sounds/hits/Socapex - new_hits.wav" type="Sample" id=22]
[ext_resource path="res://character/sounds/hits/Socapex - new_hits_2.wav" type="Sample" id=23]
[ext_resource path="res://character/sounds/swing/swing3.wav" type="Sample" id=24]
[ext_resource path="res://character/sounds/swing/swing1.wav" type="Sample" id=25]
[ext_resource path="res://character/sounds/swing/swing2.wav" type="Sample" id=26]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 12.3635

[sub_resource type="ColorRamp" id=2]

offsets = FloatArray( 0, 0.58885, 1 )
colors = ColorArray( 1, 1, 1, 0.513351, 1, 1, 1, 0.475789, 1, 1, 1, 0 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 19.1363, 24.6578 )

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 15.1419

[sub_resource type="CircleShape2D" id=5]

custom_solver_bias = 0.0
radius = 18.5253

[sub_resource type="CapsuleShape2D" id=6]

custom_solver_bias = 0.0
radius = 22.1737
height = 19.9598

[sub_resource type="CircleShape2D" id=7]

custom_solver_bias = 0.0
radius = 23.1441

[sub_resource type="SampleLibrary" id=8]

samples/aargh0 = { "db":-10.0, "pitch":1.0, "sample":ExtResource( 6 ) }
samples/aargh1 = { "db":-10.0, "pitch":1.0, "sample":ExtResource( 7 ) }
samples/aargh2 = { "db":-10.0, "pitch":1.0, "sample":ExtResource( 8 ) }
samples/aargh3 = { "db":-10.0, "pitch":1.0, "sample":ExtResource( 9 ) }
samples/aargh4 = { "db":-10.0, "pitch":1.0, "sample":ExtResource( 10 ) }
samples/aargh5 = { "db":-10.0, "pitch":1.0, "sample":ExtResource( 11 ) }
samples/aargh6 = { "db":-10.0, "pitch":1.0, "sample":ExtResource( 12 ) }
samples/aargh7 = { "db":-10.0, "pitch":1.0, "sample":ExtResource( 13 ) }
samples/axe0 = { "db":10.0, "pitch":1.0, "sample":ExtResource( 14 ) }
samples/axe1 = { "db":10.0, "pitch":1.0, "sample":ExtResource( 15 ) }
samples/axe2 = { "db":10.0, "pitch":1.0, "sample":ExtResource( 16 ) }
samples/bow_release0 = { "db":20.0, "pitch":1.0, "sample":ExtResource( 17 ) }
samples/fail0 = { "db":24.0, "pitch":1.0, "sample":ExtResource( 18 ) }
samples/fail1 = { "db":24.0, "pitch":1.0, "sample":ExtResource( 19 ) }
samples/fail2 = { "db":24.0, "pitch":1.0, "sample":ExtResource( 20 ) }
samples/fail3 = { "db":24.0, "pitch":1.0, "sample":ExtResource( 21 ) }
samples/hit0 = { "db":24.0, "pitch":1.0, "sample":ExtResource( 22 ) }
samples/hit1 = { "db":24.0, "pitch":1.0, "sample":ExtResource( 23 ) }
samples/swing0 = { "db":10.0, "pitch":1.0, "sample":ExtResource( 24 ) }
samples/swing1 = { "db":10.0, "pitch":1.0, "sample":ExtResource( 25 ) }
samples/swing2 = { "db":10.0, "pitch":1.0, "sample":ExtResource( 26 ) }

[node name="character" type="KinematicBody2D"]

transform/pos = Vector2( -1.94922, -7.7969 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1.38657, 28.4381 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
__meta__ = { "_edit_group_":true }
velocity = 150.0
weapon = "unarmed"
type = "ninja"
patrol_path_path = null
life = 10.0
respawn_point = null

[node name="shade" parent="." instance=ExtResource( 2 )]

visibility/opacity = 0.2
transform/pos = Vector2( 2.16839, 33.6156 )
transform/scale = Vector2( 1.5, 0.7 )

[node name="feet" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 1.38657, 28.4381 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="dust_particles" type="Particles2D" parent="."]

visibility/opacity = 0.5
transform/pos = Vector2( 2.39314, 29.7432 )
transform/scale = Vector2( 1.5, 1.5 )
config/amount = 3
config/lifetime = 0.886979
config/local_space = false
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 100.0
params/initial_angle = 0.0
params/initial_size = 5.0
params/final_size = 20.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 2 )

[node name="body" type="Area2D" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( -2.38419e-07, -1.90735e-06 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1.94923, 10.0246 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]

transform/pos = Vector2( 1.94923, 10.0246 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="hitbox" type="Position2D" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( -2.38419e-07, 24 )

[node name="unarmed" type="Area2D" parent="hitbox"]

editor/display_folded = true
transform/pos = Vector2( 0, 21 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox/unarmed"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="knife" type="Area2D" parent="hitbox"]

editor/display_folded = true
transform/pos = Vector2( 0, 21 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox/knife"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="sword" type="Area2D" parent="hitbox"]

editor/display_folded = true
transform/pos = Vector2( 0, 21 )
input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 0.835373, 1.05077 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox/sword"]

transform/pos = Vector2( 0.835373, 1.05077 )
transform/rot = 90.0
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="axe" type="Area2D" parent="hitbox"]

editor/display_folded = true
transform/pos = Vector2( 0.278465, 24.7215 )
input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox/axe"]

shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="trail" parent="." instance=ExtResource( 3 )]

visibility/visible = false

[node name="blood_particles" parent="." instance=ExtResource( 4 )]

[node name="blood_leak_particles" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( -0.862441, 10.8845 )

[node name="ray" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 2
type_mask = 31

[node name="sound" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 8 )
config/pitch_random = 0.0


